--- a/css/styles.css
+++ b/css/styles.css
@@ -29,54 +29,52 @@ p {
     color: var(--color-texto)
 }
 
+/* ESTO DE MOMENTO NO LO ESTOY USANDO
 
 form.busqueda input[type="search"] {
-    font-family: 'Quicksand', sans-serif; /* Aplica la fuente Quicksand */
-    font-size: 16px; /* Tamaño de la fuente */
-    padding: 5px 24px; /* Mismo padding que el botón */
-    border: 1px solid #333; /* Borde del mismo grosor que el botón */
-    border-radius: 6px; /* Bordes redondeados, igual que el botón */
-    background-color: #f9f9f9; /* Color de fondo claro */
-    width: 100%; /* El campo ocupa el 100% del ancho disponible */
-    box-sizing: border-box; /* Asegura que el padding no afecte al ancho total */
-    transition: all 0.1s ease; /* Transición suave para el cambio de estilo al hacer foco */
-}
-
-/* Estilo cuando el campo de búsqueda tiene el foco (es seleccionado) */
-form.busqueda input[type="search"]:focus {
-    border-color: #64A6BD; /* Cambia el color del borde al hacer foco */
-    outline: none; /* Elimina el contorno por defecto del navegador */
-}
-
-/* Estilo para el botón de búsqueda */
-form.busqueda button {
-    font-family: 'Quicksand', sans-serif; /* Usa la misma fuente que el input */
+    font-family: 'Quicksand', sans-serif;
     font-size: 16px;
     padding: 5px 24px;
-    border: 1px solid #333; /* Borde del mismo grosor que el input */
-    border-radius: 6px; /* Bordes redondeados */
-    background-color: #64A6BD; /* Fondo color */
-    color: white; /* Texto blanco */
-    cursor: pointer; /* Cambia el cursor al pasar por encima */
-    transition: all 0.1s ease; /* Efecto suave de transición */
+    border: 1px solid #333;
+    border-radius: 6px;
+    background-color: #f9f9f9;
+    width: 100%;
+    box-sizing: border-box;
+    transition: all 0.1s ease;
 }
 
-/* Efecto hover para el botón */
+
+form.busqueda input[type="search"]:focus {
+    border-color: #64A6BD;
+    outline: none;
+}
+
+form.busqueda button {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 16px;
+    padding: 5px 24px;
+    border: 1px solid #333;
+    border-radius: 6px;
+    background-color: #64A6BD;
+    color: white;
+    cursor: pointer;
+    transition: all 0.1s ease;
+}
+
 form.busqueda button:hover {
-    background-color: var(--color-texto); /* Cambia el color de fondo cuando se pasa el ratón */
+    background-color: var(--color-texto);
 }
 
-/* Asegurarse de que el formulario tenga un margen adecuado */
 form.busqueda {
-    display: flex; /* Usa flexbox para alinear los elementos */
-    gap: 10px; /* Espacio entre el input y el botón */
-    align-items: center; /* Alinea los elementos verticalmente */
-    max-width: 600px; /* Limita el tamaño máximo del formulario */
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    max-width: 600px;
 
 }
+*/
 
 body {
-    background-image: url(/assets/backgrounds/);
     font-family: 'Quicksand', sans-serif;
     background-color: var(--color-acento);
     color: var(--color-texto);
@@ -101,12 +99,15 @@ header {
 
 header a {
     display: inline-block;
+    padding: 0 12px;
+    border-radius: 15px;
     transition: transform 0.2s ease, color 0.2s ease;
 }
 
 header a:hover {
-    color: var(--color-acento);
     transform: scale(1.05);
+    background-color: var(--color-fondo);
+    font-weight: 600;
 }
 
 .navegacion ul {
@@ -114,42 +115,115 @@ header a:hover {
     gap: 40px
 }
 
+
+
 .brand {
     display: flex;
     flex-direction: column;
-    height: 250px;
+    justify-content: center; /* Alinea los elementos verticalmente */
+    align-items: center;     /* Alinea los elementos horizontalmente */
+    gap: 20px;
     margin: 0 auto;
+    padding: 0 60px;
+    padding-top: 100px;
+    z-index: 2;
 }
 
-.brand .logo {
-    display: flex;
-    margin: 0 auto;
-    padding-top: 200px;
-    width: 900px;
-}
-
-.brand h3, .brand p {
-    width: 900px;
-    display: flex;
-    margin: 0 auto;
-}
-
-.brand h3 {
-    text-align: center;
-}
-
-body::before {
+.brand::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url(/assets/backgrounds/sssurf.svg);
+    background-image: url(../assets/backgrounds/sssurf.svg);
     background-size: 600%;
     background-position: 40% 99px;
     background-repeat: no-repeat;
-    z-index: -1;
+    z-index: -2;
+    min-width: 1245px;
+}
+
+.brand .logo {
+    display: flex;
+    margin: 0 auto;
+    width: 90%;
+    max-width: 900px;
+}
+
+/* Definir una única animación que combine el movimiento y la rotación */
+@keyframes movimiento-balanceo {
+    0% {
+        transform: translateX(0) rotate(-15deg); /* Inicia en la posición inicial, sin rotación */
+    }
+    50% {
+        transform: translateX(-150%) rotate(15deg); /* Se mueve hacia la izquierda y balancea un poco */
+    }
+    100% {
+        transform: translateX(0) rotate(-15deg); /* Se mueve completamente a la izquierda y vuelve a la posición original */
+    }
+}
+
+/* Contenedor para las imágenes */
+.perros {
+    display: flex; /* Alinea las imágenes en fila */
+    justify-content: flex-start; /* Alinea las imágenes al principio */
+    align-items: center;
+    overflow: hidden; /* Esconde las imágenes que se salen del contenedor */
+    position: relative;
+    width: 90%; /* Ocupa todo el ancho disponible */
+    max-width: 875px;
+    height: 100px;
+    z-index: 2;
+}
+
+/* Barras laterales */
+
+
+.perros::before, .perros::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 20px; /* Ancho de las barras */
+    background-color: var(--color-fondo);
+}
+
+.perros::after {
+    right: 0; /* Barra en el lado derecho */
+}
+
+
+/* Contenedor de las imágenes duplicadas */
+.perros-wrapper {
+    display: flex;
+    gap: 50px;
+    width: 200%; /* El contenedor será el doble de ancho que el visible */
+}
+
+/* Estilo para las imágenes dentro del contenedor */
+.perros img {
+    width: 90px; /* Ajusta el ancho de las imágenes */
+    height: 90px;
+    animation: movimiento-balanceo 15s linear infinite; /* Animación combinada de movimiento y rotación */
+    z-index: 1;
+}
+
+.brand h3, .brand p {
+    text-align: center; /* Alinea el texto dentro del h3 y p */
+    margin: 0 auto;     /* Asegura que se centren dentro del contenedor */
+    width: 900px;
+}
+
+.brand h3 {
+    font-size: 1.3rem;
+}
+
+.brand p {
+    color: white;
+    border: solid 1px var(--color-primario);
+    background-color: var(--color-fondo);
+    border-radius: 10px;
 }
 
 .main-section {
@@ -157,12 +231,68 @@ body::before {
 }
 
 .newsletter {
-    height: 250px;
+    height: 400px;
 }
 
 footer {
     background-color: var(--color-fondo);
-    display: Flex;
+    display: flex;
+    justify-content: space-between;
     height: 200px;
-    padding: 20px 100px;
+    padding: 30px 100px;
+    z-index: 1;  /* Asegura que el contenido del footer esté encima */
+    position: relative;
+}
+
+.footer-background {
+    content: "";
+    position: absolute;
+    top: -450%;
+    left: 0;
+    right: 0;
+    bottom: 50%;
+    background-image: url(../assets/backgrounds/sssurf2.svg);
+    background-size: 600%;
+    background-position: 40% 0px;
+    background-repeat: no-repeat;
+    z-index: -1;
+    transform: rotate(180deg);
+    min-width: 1260px;
+}
+
+.footer-links ul {
+    display: flex;
+    width: 200px;
+    gap: 10px;
+}
+
+.footer-socials ul {
+    display: flex;
+    width: 200px;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.footer-socials ul li a img {
+    width: 30px;
+    height: auto;
+}
+
+.footer-links ul {
+    flex-direction: column;
+}
+
+.footer-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.footer-apps ul {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-apps ul li img {
+    max-width: 180px;
 }
