--- a/styles-copia.css
+++ b/styles-copia.css
@@ -124,9 +124,8 @@ header {
     animation: moveBackground 1.0s cubic-bezier(0.25, 0.8, 0.25, 1) forwards;; /* Aplica la animación */
 }
 
-.header__logo {
+.logo {
     width: 200px;
-    margin-top: 25px;
 }
 
 header a {
@@ -136,30 +135,38 @@ header a {
     transition: transform 0.2s ease, color 0.2s ease;
 }
 
-.header__nav-link:hover {
+header a:hover {
     transform: scale(1.05);
     background-color: var(--color-fondo);
     font-weight: 600;
 }
 
-.header__nav ul {
+.navegacion ul {
     display: flex;
-    gap: 2vw;
+    gap: 40px
 }
 
-.main__brand {
+main {
+    position: relative;
+    z-index: 2;  /* o un valor superior */
+}
+
+.brand {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     gap: 20px;
     margin: 0 auto;
-    padding: 0 150px;
+    padding: 0 60px;
     padding-top: 100px;
+    z-index: 2;
 }
 
-.main__brand .main__brand-logo {
+.brand .logo {
     display: flex;
-    width: 100%;
+    margin: 0 auto;
+    width: 90%;
     max-width: 900px;
 }
 
@@ -175,14 +182,15 @@ header a {
     }
 }
 
-.main__brand-dogs {
+
+.perros {
     display: flex;
     justify-content: flex-start; 
     align-items: center;
     overflow: hidden;
     position: relative;
-    width: 100%;
-    max-width: 900px;
+    width: 90%;
+    max-width: 875px;
     height: 100px;
     z-index: 2;
     animation: expandirPerros 1.2s ease-in-out forwards;
@@ -194,13 +202,13 @@ header a {
         width: 40px;
     }
     100% {
-        width: 100%;
+        width: calc(100% - 40px);
     }
 }
 
 /* Barras laterales */
 
-.main__brand-dogs::before, .main__brand-dogs::after {
+.perros::before, .perros::after {
     content: "";
     position: absolute;
     top: 0;
@@ -209,40 +217,50 @@ header a {
     background-color: var(--color-fondo);
 }
 
-.main__brand-dogs::before {
+.perros::before {
     background-color: var(--color-secundario);
 }
 
-.main__brand-dogs::after {
+.perros::after {
     right: 0;
 }
 
 /* Contenedor de las imágenes duplicadas */
-.main__brand-dogs-wrapper {
+.perros-wrapper {
     display: flex;
     gap: 50px;
-    width: 100%; /* El contenedor será el doble de ancho que el visible */
+    width: 200%; /* El contenedor será el doble de ancho que el visible */
 }
 
 
-.main__brand-dogs img {
+.perros img {
     width: 90px;
     height: 90px;
     animation: movimiento-balanceo 45s linear infinite;
     z-index: 1;
 }
 
-.main__brand p {
+.brand h3, .brand p {
+    text-align: center;
+    margin: 0 auto;
+    width: 900px;
+}
+
+.brand h3 {
+    font-size: 1.3rem;
+}
+
+.brand p {
     color: white;
     border: solid 1px var(--color-primario);
     background-color: var(--color-fondo);
     border-radius: 10px;
 }
 
-.main__products {
+.main-section {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    padding: 100px 15vw;
+    padding: 100px 100px;
     gap: 50px;
     margin: 20px auto;
     font-family: var(--fuente-1);
@@ -252,7 +270,7 @@ header a {
     
 }
 
-.product {
+.articulo {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -261,7 +279,7 @@ header a {
     margin: 0 auto;
 }
 
-.product h3 {
+.articulo h3 {
     border-bottom:solid 15px var(--color-secundario); /* Cambia el color y grosor según lo necesites */
     display: inline-block;
     margin-bottom: 0;
@@ -270,13 +288,13 @@ header a {
     font-size: 2.2rem;;
 }
 
-.product img {
+.articulo img {
     width: 100%;
     transform: scale(1); /* Estado inicial normal */
     transition: transform 0.3s ease; /* Transición al entrar/salir del hover */
 }
 
-.product img:hover {
+.articulo img:hover {
     animation: balanceo 1.5s cubic-bezier(0.42, 0, 0.58, 1) 1; /* Animación más fluida */
     transform: scale(1.1)
 }
@@ -299,7 +317,7 @@ header a {
     }
 }
 
-.main__newsletter {
+.newsletter {
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
@@ -312,7 +330,7 @@ header a {
     border-color: var(--color-acento);
 }
 
-.main__newsletter::before {
+.newsletter::before {
     content: "";
     position: absolute;
     top: 0;
@@ -325,39 +343,39 @@ header a {
     z-index: -1; /* Asegura que el pseudo-elemento esté debajo del contenido */
 }
 
-.newsletter__left, .newsletter__right {
+.newsletter-izquierda, .newsletter-derecha {
     flex: 1;
 }
 
-.newsletter__left {
+.newsletter-izquierda {
     display: flex;
     gap: 35px;
 }
 
-.main__newsletter img {
+.newsletter img {
     width: 150px;
     height: auto;
     object-fit:contain;
 }
 
-.main__newsletter h1 {
+.newsletter h1 {
     font-family: "Railey-PersonalUse";
     font-size: 3rem;
     color: white;
     font-weight: lighter;
 }
 
-.main__newsletter h3 {
+.newsletter h3 {
     margin-bottom: 9px;
 }
 
-.main__newsletter i {
+.newsletter i {
     color: white; /* Color blanco para el ícono */
     margin-right: 10px; /* Espacio entre el ícono y el texto */
     font-size: 20px; /* Tamaño del ícono */
 }
 
-.newsletter__right {
+.newsletter-derecha {
     display: flex;
     flex-direction: column;
     padding-top: 30px;
@@ -366,7 +384,7 @@ header a {
 }
 
 @media (max-width: 1168px) {
-    .main__newsletter {
+    .newsletter {
       flex-direction: column; /* Cambia la dirección de los elementos para apilarse verticalmente */
       width: 600px;
       gap: 30px;
@@ -374,14 +392,14 @@ header a {
       margin-bottom: 100px; /* Ajusta el margen inferior */
     }
   
-    .newsletter__left, .newsletter__right {
+    .newsletter-izquierda, .newsletter-derecha {
       flex: none; /* Permite que los divs ocupen el espacio completo */
       margin: 0 auto;
       width: 85%; /* Asegura que ocupen el 100% de su contenedor */
       padding-top: 0px;
     }
   
-    .main__newsletter h1 {
+    .newsletter h1 {
       font-size: 4rem; /* Reduce el tamaño de la fuente */
     }
 
@@ -391,9 +409,30 @@ header a {
 footer {
     display: flex;
     justify-content: space-between;
-    padding: 40px 10vw;
-    padding-bottom: 90px;
+    height: 250px;
+    padding: 30px 200px;
+    padding-bottom: 150px;
+    z-index: 1;
+    position: relative;
+    /* background-color: var(--color-fondo); */
 }
+
+/* .footer-background {
+    content: "";
+    position: absolute;
+    top: -450%;
+    left: 0;
+    right: 0;
+    bottom: 50%;
+    background-image: url(../assets/backgrounds/sssurf2.svg);
+    background-size: 600%;
+    background-position: 49% 0px;
+    background-repeat: no-repeat;
+    z-index: -1;
+    transform: rotate(180deg);
+    min-width: 1550px;
+    animation: moveBackground 1.0s cubic-bezier(0.25, 0.8, 0.25, 1) forwards;
+} */
 
 @keyframes moveBackground {
     from {
@@ -404,65 +443,39 @@ footer {
     }
 }
 
-.footer__links ul {
+.footer-links ul {
     display: flex;
     width: 200px;
     gap: 10px;
 }
 
-.footer__socials ul {
+.footer-socials ul {
     display: flex;
+    width: 200px;
+    flex-wrap: wrap;
     gap: 30px;
 }
 
-.footer__socials ul li a img {
+.footer-socials ul li a img {
     width: 30px;
     height: auto;
 }
 
-.footer__links ul {
+.footer-links ul {
     flex-direction: column;
-    color: white
 }
 
-.footer__apps {
+.footer-right {
     display: flex;
     flex-direction: column;
-    align-items:flex-end;
+    justify-content: space-between;
 }
 
-.footer__apps p {
-    color: white;
-}
-
-.footer__apps-list {
-    margin-bottom: 40px;
-    
-}
-
-.footer__apps-list ul {
+.footer-apps ul {
     display: flex;
-    gap: 20px;
+    justify-content: space-between;
 }
 
-.footer__apps-list ul li img {
+.footer-apps ul li img {
     max-width: 180px;
-}
-
-@media (max-width: 1168px) {
-    footer {
-        flex-direction: column;
-        padding: 0 10vw;
-        padding-bottom: 100px;
-        align-items: center;
-        gap: 25px;
-    }
-
-    .footer__links ul {
-        text-align: center;
-    }
-
-    .footer__apps {
-        align-items: center;
-    }
 }
