--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ main {
     gap: 20px;
     margin: 0 auto;
     padding-top: 100px;
-    min-width: 400px;
+    min-width: 100%;
 }
 
 .main__brand .main__brand-logo {
@@ -272,7 +272,7 @@ main {
     grid-template-columns: repeat(3, 1fr);
     padding: 100px 0;
     gap: 50px;
-    margin: 20px auto;
+    margin: 0 auto;
     font-family: var(--fuente-1);
     color: white;
     font-size: 1.3rem;
@@ -290,11 +290,10 @@ main {
 }
 
 .product h3 {
-    border-bottom:solid 15px var(--color-secundario); /* Cambia el color y grosor según lo necesites */
+    border-bottom:solid 15px var(--color-secundario);
     display: inline-block;
-    margin-bottom: 0;
     padding-bottom: 4px;
-    line-height: 0; /* Elimina cualquier espacio adicional de línea */
+    line-height: 0;
     font-size: 2.2rem;;
 }
 
@@ -313,6 +312,14 @@ main {
     .main__products {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 650px) {
+    .product h3 {
+        border-bottom:solid 12px var(--color-secundario);
+        font-size: 1.6rem;
+        padding-bottom: 3px;
     }
 }
 
@@ -337,6 +344,7 @@ main {
     margin: 0 auto;
     margin-bottom: 150px;
     position: relative;
+    width: 100%;
     max-width: 1100px;
     padding: 30px;
     border: 3px solid;
@@ -384,9 +392,9 @@ main {
 }
 
 .main__newsletter i {
-    color: white; /* Color blanco para el ícono */
-    margin-right: 10px; /* Espacio entre el ícono y el texto */
-    font-size: 20px; /* Tamaño del ícono */
+    color: white;
+    margin-right: 10px;
+    font-size: 20px;
 }
 
 .newsletter__right {
@@ -397,10 +405,10 @@ main {
     gap: 10px;
 }
 
-@media (max-width: 1168px) {
+@media (max-width: 1450px) {
     .main__newsletter {
       flex-direction: column; /* Cambia la dirección de los elementos para apilarse verticalmente */
-      width: 600px;
+      max-width: 600px;
       gap: 30px;
       padding: 20px;
       margin-bottom: 100px; /* Ajusta el margen inferior */
@@ -417,8 +425,50 @@ main {
       font-size: 4rem; /* Reduce el tamaño de la fuente */
     }
 
-  }
+}
 
+@media (max-width: 885px) {
+    .main__newsletter {
+        flex-direction: column; /* Cambia la dirección de los elementos para apilarse verticalmente */
+        max-width: 600px;
+        gap: 30px;
+        padding: 30px;
+        margin-bottom: 100px; /* Ajusta el margen inferior */
+    }
+    
+    .newsletter__left, .newsletter__right {
+    flex: none;
+    align-items: center;
+    margin: 0 auto;
+    width: 100%;
+    padding-top: 0px;
+    }
+
+    .newsletter__form {
+        width: 100%;
+    }
+
+    .main__newsletter input {
+        width: 100%;
+    }
+    
+    .main__newsletter h1 {
+    font-size: 4.4rem; /* Reduce el tamaño de la fuente */
+    }
+
+    .main__newsletter img {
+    display: none;
+    }
+
+    .newsletter__benefits {
+        margin: 0 auto;
+    }
+
+    .newsletter__benefits h1 {
+        text-align: center;
+    }
+
+}
 
 footer {
     display: flex;
@@ -442,19 +492,28 @@ footer {
     gap: 10px;
 }
 
+.footer__links-list a:hover {
+    border-bottom:solid 8px var(--color-secundario); /* Cambia el color y grosor según lo necesites */
+    display: inline-block;
+    margin-bottom: 0;
+    padding-bottom: 2px;
+    line-height: 0; /* Elimina cualquier espacio adicional de línea */
+}
+
 .footer__socials ul {
     display: flex;
-    gap: 30px;
+    gap: 20px;
 }
 
 .footer__socials ul li a img {
-    width: 30px;
+    width: 35px;
     height: auto;
 }
 
 .footer__links ul {
     flex-direction: column;
-    color: white
+    color: white;
+    text-align: center;
 }
 
 .footer__apps {
