--- a/css/styles.css
+++ b/css/styles.css
@@ -457,7 +457,12 @@ main {
     }
 
     .main__newsletter img {
-    display: none;
+    position: absolute;
+    width: 100%;
+    height: 25%;
+    top: 20px;
+    left: 0;
+    z-index: -1;
     }
 
     .newsletter__benefits {
