--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --color-primario: #64A6BD;
+    --color-primario: #b5c6d8;
     --color-secundario: #90A8C3;
     --color-acento: #F4CAE0;
     --color-fondo: #D7B9D5;
@@ -13,6 +13,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+*::selection {
+    background-color: var(--color-acento);  /* Color de fondo del texto seleccionado */            /* Color del texto seleccionado */
 }
 
 ul {
@@ -97,7 +101,7 @@ body {
     background-size: cover;
 }
 
-header {
+.header {
     font-size: 1.3rem;
     font-weight: 400;
     color: white;
@@ -132,20 +136,21 @@ header {
 
 header a {
     display: inline-block;
-    padding: 0 12px;
-    border-radius: 15px;
     transition: transform 0.2s ease, color 0.2s ease;
 }
 
 .header__nav-link:hover {
-    transform: scale(1.05);
-    background-color: var(--color-fondo);
-    font-weight: 600;
+    transform: scale(1.02);
+    border-bottom:solid 8px var(--color-fondo); /* Cambia el color y grosor según lo necesites */
+    display: inline-block;
+    margin-bottom: 0;
+    padding-bottom: 4px;
+    line-height: 0;
 }
 
 .header__nav ul {
     display: flex;
-    gap: 2vw;
+    gap: 3vw;
 }
 
 @media (max-width: 945px) {
@@ -163,7 +168,7 @@ header a {
     .header__nav ul {
         font-size: 1.3rem;
         font-weight: 400;
-        gap: 1vw;
+        gap: 5vw;
     }
     .header__logo {
         width: 200px;
@@ -174,6 +179,10 @@ header a {
 main {
     padding: 0 15vw;
 }
+
+/* ---------------- */
+/* - PÁGINA INDEX - */
+/* ---------------- */
 
 .main__brand {
     display: flex;
@@ -267,88 +276,89 @@ main {
     border-radius: 10px;
 }
 
-.main__products {
-    padding: 40px 0;
-}
-
-.products__title {
-    text-align: center;
-    font-family: var(--fuente-2);
-    color: var(--color-texto);
-    font-size: 6rem;
-    font-weight: lighter;
-    margin: 0 auto;
-}
-
-.products__list {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    padding: 40px 0;
-    gap: 50px;
-    margin: 0 auto;
-    font-family: var(--fuente-1);
-    color: white;
-    font-size: 1.3rem;
-    font-weight: lighter;
-    
-}
-
-.product {
+.about-store {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
-    max-width: 250px;
-    gap: 30px;
-    margin: 0 auto;
+    padding: 50px 0px;
+    text-align: center;
 }
 
-.product h3 {
-    border-bottom:solid 15px var(--color-secundario);
+.about-store p {
+    text-align: center;
+}
+
+.about-store__content {
+    max-width: 100%;
+}
+
+.about-store__title {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+}
+
+.about-store__description {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.about-store__features {
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.feature {
+    width: 30%;
+    min-width: 450px;
+    padding: 20px;
+}
+
+.feature h2 {
+    font-family: var(--fuente-2);
+    font-size: 2.5rem;;
+    text-align: center;
+    border-bottom:solid 6px var(--color-secundario);
+    margin-bottom: 20px;
+}
+
+.feature p {
+    text-align: justify;
+}
+
+.feature img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+}
+
+.about-store__cta {
     display: inline-block;
-    padding-bottom: 4px;
-    line-height: 0;
-    font-size: 2.2rem;;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 22px;
+    padding: 5px 24px;
+    border: 2px solid var(--color-fondo);
+    border-radius: 6px;
+    background-color: var(--color-secundario);
+    color: white;
+    cursor: pointer;
+    text-decoration: none; /* Para quitar el subrayado por defecto de los enlaces */
+    transition: all 0.1s ease;
 }
 
-.product img {
-    width: 100%;
-    transform: scale(1); /* Estado inicial normal */
-    transition: transform 0.3s ease; /* Transición al entrar/salir del hover */
+.about-store__cta:hover {
+    background-color: var(--color-acento); /* Para cambiar el color de fondo al pasar el ratón */
+    border-color: var(--color-acento); /* Cambiar el color del borde al pasar el ratón */
 }
 
-.product img:hover {
-    animation: balanceo 1.0s cubic-bezier(0.42, 0, 0.58, 1) 1; /* Animación más fluida */
-    transform: scale(1.1)
-}
-
-@media (max-width: 945px) {
-    .products__list {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-
-@media (max-width: 650px) {
-    .product h3 {
-        border-bottom:solid 12px var(--color-secundario);
-        font-size: 1.6rem;
-        padding-bottom: 3px;
-    }
-}
-
-@keyframes balanceo {
-    0% {
-        transform: scale(1.1) rotate(0deg); /* Comienza recto */
-    }
-    33% {
-        transform: scale(1.1) rotate(-7deg); /* Inclina más a la izquierda */
-    }
-    66% {
-        transform: scale(1.1) rotate(4deg); /* Vuelve un poco a la derecha */
-    }
-    100% {
-        transform: scale(1.1) rotate(0deg); /* Regresa recto */
-    }
+.about-store__image img {
+    width: 400px;
+    height: auto;
+    border-radius: 10px;
 }
 
 .main__newsletter {
@@ -580,42 +590,273 @@ footer {
 /* PÁGINA PRODUCTS */
 /* --------------- */
 
+.main__products {
+    padding: 40px 0;
+}
+
+.products__title {
+    text-align: center;
+    font-family: var(--fuente-2);
+    color: var(--color-texto);
+    font-size: 6rem;
+    font-weight: lighter;
+    margin: 0 auto;
+}
+
+.products__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 40px 0;
+    gap: 50px;
+    margin: 0 auto;
+    font-family: var(--fuente-1);
+    color: white;
+    font-size: 1.3rem;
+    font-weight: lighter;
+}
+
+.products__list .product {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 250px;
+    gap: 30px;
+    margin: 0 auto;
+}
+
+
+.product h3 {
+    border-bottom:solid 15px var(--color-secundario);
+    display: inline-block;
+    padding-bottom: 4px;
+    line-height: 0;
+    font-size: 2.2rem;;
+}
+
+.product img {
+    width: 100%;
+    transform: scale(1); /* Estado inicial normal */
+    transition: transform 0.3s ease; /* Transición al entrar/salir del hover */
+}
+
+.main__products .product img:hover {
+    animation: balanceo 1.0s cubic-bezier(0.42, 0, 0.58, 1) 1; /* Animación más fluida */
+    transform: scale(1.1)
+}
+
+@media (max-width: 945px) {
+    .products__list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 650px) {
+    .product h3 {
+        border-bottom:solid 12px var(--color-secundario);
+        font-size: 1.6rem;
+        padding-bottom: 3px;
+    }
+}
+
+@keyframes balanceo {
+    0% {
+        transform: scale(1.1) rotate(0deg); /* Comienza recto */
+    }
+    33% {
+        transform: scale(1.1) rotate(-7deg); /* Inclina más a la izquierda */
+    }
+    66% {
+        transform: scale(1.1) rotate(4deg); /* Vuelve un poco a la derecha */
+    }
+    100% {
+        transform: scale(1.1) rotate(0deg); /* Regresa recto */
+    }
+}
+
+.featured {
+    margin-bottom: 80px;
+}
+
+.featured__title {
+    text-align: center;
+    font-family: var(--fuente-2);
+    font-size: 4rem;
+    font-weight: 100;
+    margin-bottom: 35px;
+}
+
+.featured__list {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+}
+
+.featured__item {
+    max-width: 450px;
+    min-width: 250px;
+    transition: transform 0.1s ease-in-out;
+}
+
+.featured__item .product__image {
+    background: var(--color-acento);
+    border: solid 1px var(--color-fondo);
+    border-radius: 4px;
+    min-height: 50%;
+    object-fit: cover;
+    box-shadow: solid 1px black;
+}
+
+.featured__item:hover {
+    transform: scale(1.01);  /* Aumenta el tamaño en un 20% */
+    transform-origin: center;  /* Escala desde el centro del artículo */
+}
+
+.featured__item .product__image:hover {
+    background: var(--color-fondo);
+    border: solid 1px var(--color-acento);
+}
+
+.product__rating {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.product__rating i {
+    font-size: 18px;
+}
+
+.product__rating-score {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.product__rating-reviews {
+    font-size: 1rem;
+}
+
+.product__name {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.product__name:hover {
+    text-decoration: 4px underline var(--color-secundario);
+}
+
+.product__price {
+    font-family: var(--fuente-2);
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+
+@media(max-width: 1130px) {
+    .featured__list {
+        flex-wrap: wrap;
+    }
+
+    .featured__item {
+        width: 45%;
+    }
+}
+
 .main__sizes {
     margin-bottom: 100px;
 }
 
+.sizes__table-wrapper--inverted {
+    display: none;
+    font-size: 1.3rem;
+}
+
 .main__sizes h3 {
-    margin: 0 auto;
     text-align: center;
     font-family: var(--fuente-2);
     font-size: 4rem;
     font-weight: 100;
 }
 
-.dog-image {
+.sizes__image {
     width: 100%;
-    min-width: 100px;
+    max-width: 100px;
+    height: 100px;
+    object-fit: cover;
 }
 
-.size-table {
+.sizes__table {
     width: 100%;
     border-collapse: collapse;
 }
 
-.size-table thead tr {
-    border-bottom: 4px solid var(--color-secundario); /* Solo afecta la primera fila del tbody */
+.sizes__header .sizes__row {
+    border-bottom: 4px solid var(--color-secundario);
 }
 
-.size-table tr {
-    border-bottom: 2px solid var(--color-secundario); /* Línea entre filas */
+.sizes__body .sizes__row {
+    border-bottom: 2px solid var(--color-secundario);
 }
 
-.size-table tbody tr td:first-child {
+.sizes__body .sizes__cell:first-child {
     font-weight: bold;
+    text-align: left;
 }
 
-.size-table td,
-.size-table th {
-    padding: 10px; /* Espaciado interno */
+.sizes__cell {
+    padding: 10px;
     text-align: center;
+    vertical-align: center;
+}
+
+@media (max-width:1415px) {
+    .sizes__table-wrapper--default {
+        display: none;
+    }
+
+    .sizes__table-wrapper--inverted {
+        display: block;
+    }
+
+    .sizes__title {
+        margin-bottom: 30px;
+    }
+
+    .sizes__image {
+        height: 75px;
+        object-position: bottom;
+    }
+}
+
+@media (max-width:885px) {
+    .sizes__table-wrapper--inverted {
+        font-size: 1rem;
+    }
+}
+
+/* ---------------- */
+/* - PÁGINA ABOUT - */
+/* ---------------- */
+
+.map-container {
+    font-family: var(--fuente-2);
+    font-size: 3rem;
+    font-weight: lighter;
+    margin: 0 auto;
+    margin-top: 50px;;
+    filter:saturate(70%);
+}
+
+.map-container p {
+    border-bottom:solid 12px var(--color-primario);
+    display: inline-block;
+    margin-bottom: 0;
+    line-height: 0;
+}
+
+.google-map {
+    width: 100%;
+    height: 450px;
+    border: none;
+    border-radius: 8px;
 }
