--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ input[type="button"] {
 button:hover,
 input[type="submit"]:hover,
 input[type="button"]:hover {
-    background-color: var(--color-fondo);
+    background-color: var(--color-primario);
 
 }
 
@@ -289,56 +289,101 @@ main {
     text-align: center;
 }
 
+.about-store h2 {
+   font-weight: 400;
+}
+
 .about-store__content {
     max-width: 100%;
 }
 
 .about-store__title {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
+    position: relative;
+    top: 55px;
+    right: 0%;
+    font-size: 4.5rem;
+    font-family: var(--fuente-2);
+    transform: rotate(1deg);
 }
 
 .about-store__description {
     font-size: 1.2rem;
     margin-bottom: 20px;
+    padding: 50px 30px;
     text-align: center;
-}
-
-.about-store__features {
-    display: flex;
-    flex-wrap: wrap;
-
-    justify-content: center;
-    margin-bottom: 20px;
+    background-color: var(--color-fondo);
+    border: double 12px var(--color-);
+    border-radius: 10px;
 }
 
 .feature {
-    width: 30%;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
     min-width: 450px;
-    padding: 20px;
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+    padding: 10px 40px;
+    background-color:var(--color-secundario);
+    border: double 16px var(--color-fondo);
+    border-radius: 10px 200px 10px 200px;
+    transition: all 0.1s ease;
+}
+
+.feature:nth-child(2) {
+    border-radius: 200px 10px 200px 15px;
+    justify-content: flex-end;
+}
+
+.feature:nth-child(3) {
+    justify-content: flex-start;
+    border-radius: 10px 200px 10px 200px;
 }
 
 .feature h2 {
     font-family: var(--fuente-2);
-    font-size: 2.5rem;;
-    text-align: center;
-    border-bottom:solid 6px var(--color-secundario);
+    font-size: 3.5rem;;
+}
+
+
+
+.feature:hover {
+    transform: scale(1.01);
+}
+.about-store__features {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     margin-bottom: 20px;
 }
 
-.feature p {
-    text-align: justify;
+.about-store__cta {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 22px;
+    padding: 5px 24px;
+    margin: 0 auto;
+    border: 2px solid var(--color-fondo);
+    border-radius: 6px;
+    background-color: var(--color-secundario);
+    color: white;
+    cursor: pointer;
+    transition: all 0.1s ease;
+}
+
+.about-store__cta:hover {
+    background-color: var(--color-primario);
 }
 
 .feature img {
     width: 150px;
     height: 150px;
+    margin: 0 auto;
     object-fit: cover;
 }
 
 .welcomed {
     position: relative;
-    top: -5px;
+    top: -26px;
     font-size: 2rem;
     transform: rotate(-25deg);
 }
@@ -356,7 +401,7 @@ main {
     margin-bottom: 150px;
     position: relative;
     width: 100%;
-    max-width: 1100px;
+    max-width: 1500px;
     padding: 30px;
     border: 3px solid;
     border-radius: 15px;
@@ -419,7 +464,7 @@ main {
 @media (max-width: 1450px) {
     .main__newsletter {
       flex-direction: column; /* Cambia la dirección de los elementos para apilarse verticalmente */
-      max-width: 600px;
+      max-width: 1000px;
       gap: 30px;
       padding: 20px;
       margin-bottom: 100px; /* Ajusta el margen inferior */
